# hector_slam

./: .gitignore  CMakeLists.txt  README.txt  rosdep.yaml  stack.xml
hector_compressed_map_transport/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_compressed_map_transport/src/: map_to_image_node.cpp
hector_geotiff/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_geotiff/fonts/: LICENSE.txt
hector_geotiff/include/geotiff_writer/: geotiff_writer.h  map_writer_interface.h  map_writer_plugin_interface.h
hector_geotiff/include/hector_geotiff/: geotiff_writer.h  map_writer_interface.h
hector_geotiff/include/hector_geotiff/geotiff_writer/: geotiff_writer.h
hector_geotiff/launch/: geotiff_mapper.launch  geotiff_mapper_merged.launch  geotiff_mapper_merged_gui.launch  geotiff_mapper_only.launch
hector_geotiff/maps/merged_maps/: README.md
hector_geotiff/src/: geotiff_node.cpp  geotiff_saver.cpp
hector_geotiff/src/geotiff_writer/: geotiff_writer.cpp
hector_geotiff_launch/: CHANGELOG.rst  CMakeLists.txt  package.xml
hector_geotiff_launch/launch/: geotiff_mapper.launch
hector_geotiff_plugins/: CHANGELOG.rst  CMakeLists.txt  hector_geotiff_plugins.xml  mainpage.dox  manifest.xml  package.xml
hector_geotiff_plugins/src/: trajectory_geotiff_plugin.cpp
hector_imu_attitude_to_tf/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_imu_attitude_to_tf/launch/: example.launch
hector_imu_attitude_to_tf/src/: imu_attitude_to_tf_node.cpp
hector_imu_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
hector_imu_tools/launch/: bertl_robot.launch  jasmine_robot.launch
hector_imu_tools/src/: pose_and_orientation_to_imu_node.cpp
hector_localize/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
hector_localize/include/hector_slam_lib/map/: GridMapCacheArray.h  GridMapLogOdds.h  OccGridMapBase.h~  OccGridMapUtil.h  OccGridMapUtil.h~
hector_localize/include/hector_slam_lib/matcher/: ScanMatcher.h  ScanMatcher.h~
hector_localize/include/hector_slam_lib/slam_main/: HectorSlamProcessor.h  HectorSlamProcessor.h~  MapProcContainer.h  MapRepMultiMap.h  MapRepMultiMap.h~  MapRepresentationInterface.h  MapRepresentationInterface.h~  Unaltered_HectorSlamProcessor.h  Unaltered_HectorSlamProcessor.h~
hector_localize/launch/: hector.rviz  mapping_default.launch  mapping_default.launch~  tutorial.launch
hector_localize/maps/: output_map3.txt  output_map3.txt~
hector_localize/matlab/: edit_map.m  output_map3.txt  rotationGUI.m
hector_localize/src/: #PoseInfoContainer.cpp#  HectorDebugInfoProvider.h  HectorDebugInfoProvider.h~  HectorMappingRos.cpp  HectorMappingRos.cpp~  HectorMappingRos.h  HectorMappingRos.h~  main.cpp  main.cpp~
hector_localize/src/hector_localize/msg/: _HectorDebugInfo.py  _HectorIterData.py  __init__.py
hector_map_server/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_map_server/src/: hector_map_server.cpp
hector_map_tools/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_map_tools/include/hector_map_tools/: HectorMapTools.h
hector_mapping/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_mapping/include/hector_slam_lib/map/: GridMap.h  GridMapCacheArray.h  GridMapLogOdds.h  GridMapReflectanceCount.h  MapDimensionProperties.h  OccGridMapBase.h  OccGridMapUtil.h  OccGridMapUtilConfig.h
hector_mapping/include/hector_slam_lib/matcher/: ScanMatcher.h
hector_mapping/include/hector_slam_lib/slam_main/: HectorSlamProcessor.h  MapRepMultiMap.h  MapRepSingleMap.h
hector_mapping/include/hector_slam_lib/util/: HectorDebugInfoInterface.h  MapLockerInterface.h  UtilFunctions.h
hector_mapping/launch/: debug.launch  hector_ugv.launch  mapping_default.launch  no_attitude_mapping_box.launch  simulator.launch  speedtest_log.launch  urg04.launch
hector_mapping/src/: HectorDebugInfoProvider.h  HectorDrawings.h  HectorMapMutex.h  HectorMappingRos.cpp  HectorMappingRos.h  PoseInfoContainer.h
hector_mapping/srv/: HectorManagement.srv  ResetMapping.srv  SetInitialPose.srv
hector_mapping/swig/: CMakeLists.txt  HectorSlam_proxy.c  HectorSlam_proxy.h  hector_mapping.i  hector_mappingC_wrap.cxx  standalone.cpp
hector_mapping_known_poses/: CHANGELOG.rst  CMakeLists.txt  package.xml
hector_mapping_known_poses/cfg/: HectorMappingRos.cfg
hector_mapping_known_poses/config/: shadow_filter.yaml  veil_filter.yaml
hector_mapping_known_poses/launch/: mapping_default.launch  mapping_filter_veil_wall.launch  test_setup_with_mapping.launch
hector_mapping_known_poses/msg/: HectorDebugInfo.msg
hector_mapping_known_poses/src/: HectorMappingRos.cpp  HectorMappingRos.h  PoseInfoContainer.cpp  main.cpp  main_mapper.cpp
hector_marker_drawing/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
hector_marker_drawing/include/hector_marker_drawing/: DrawInterface.h  HectorDrawings.h
hector_nav_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_nav_msgs/srv/: GetDistanceToObstacle.srv  GetNormal.srv  GetRecoveryInfo.srv  GetRobotTrajectory.srv  GetSearchPosition.srv
hector_path_saver/: CMakeLists.txt  mainpage.dox  manifest.xml
hector_scanmatcher/: CMakeLists.txt  mainpage.dox  manifest.xml
hector_slam/: CHANGELOG.rst  CMakeLists.txt  package.xml
hector_slam_launch/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_slam_launch/launch/: cityflyer_logfile_processing.launch  hector_ugv.launch  height_mapping.launch  mapping_box.launch  mpo700_mapping.launch  odom_test.launch  postproc_data.launch  postproc_qut_logs.launch  pr2os.launch  quadrotor_uav.launch  tutorial.launch
hector_slam_launch/rviz_cfg/: mapping_demo.rviz  mapping_demo.vcg
hector_trajectory_geotiff_plugins/: CMakeLists.txt  manifest.xml
hector_trajectory_server/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_trajectory_server/src/: hector_trajectory_server.cpp
(+31 files in other folders)
